:sos: overflow issues :sob:

--- a/Sofie/stylesheet.css
+++ b/Sofie/stylesheet.css
@@ -18,10 +18,62 @@ h1, h2, h3, h4, p, a {
     text-shadow: rgb(0, 0, 0) 1px 1px;
 }
 
-body {
-    width: 1440px;
-    height: 787px;
+/* @media screen and (min-width: 960px) {
+    body {
+        width: 100%;
+    }
+
+    .background {
+        height: 540px;
+    }
+
+    .login__screen {
+        height: 540px;
+    }
 }
+
+@media screen and (min-width: 1024px) {
+    body {
+        width: 100%;
+    }
+
+    .background {
+        height: 640px;
+    }
+
+    .login__screen {
+        height: 640px;
+    }
+}
+
+@media screen and (min-width: 1366px) {
+    body {
+        width: 100%;
+    }
+
+    .background {
+        height: 768px;
+    }
+
+    .login__screen {
+        height: 768px;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    body {
+        width: 100%;
+        max-height: 100%;
+    }
+
+    .background {
+        height: 100%;
+    }
+
+    .login__screen {
+        height: 1080px;
+    }
+} */
 
 /* login screen */
 .login__screen {
@@ -294,9 +346,6 @@ body {
     top: 60px;
     left: 150px;
 
-    height: 700px;
-    width: 1150px;
-
     background-color: var(--white);
     box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.22);
     border: #00089C thin solid;
@@ -424,7 +473,6 @@ body {
 
 .browser {
     margin-top: .25rem;
-    height: 650px;
 
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -440,23 +488,15 @@ body {
 }
 
 .about {
-    width: 100%;
-    /* height: 600px; */
-
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(5, auto);
-
-    /* overflow-y: scroll; */
 }
 
 .about__section{
     margin: 0 auto;
     padding: .5rem;
-
-    width: 300px;
-    height: auto;
 
     background-color: rgb(0, 84, 233, .4);
     border: thin var(--blue) solid;
@@ -464,7 +504,6 @@ body {
 }
 
 .about__me {
-    grid-area: aboutme;
     grid-column: 2;
     grid-row: 1;
 
@@ -472,8 +511,6 @@ body {
 }
 
 .about__contact {
-    grid-area: contact;
-
     grid-column: 2;
     grid-row: 3;
 }
